--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "build": "webpack --mode production",
+    "watchClient": "nodemon --watch src --ext js,jsx,css,html --exec 'npm run build'",
+    "watcherver": "nodemon --watch server --ext js --signal SIGUSR2 --exec 'npm run start'",
+    "devserver": "concurrently \"npm run watchServer\" \"npm run watchClient\""
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +23,21 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "socket.io-client": "^4.7.4"
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-minimizer-webpack-plugin": "^6.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.0",
+    "nodemon": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "socket.io-client": "^4.7.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
   }
 }
