--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "build": "webpack --mode production",
+    "buildProd": "webpack --mode production",
+    "build": "webpack",
     "watchClient": "nodemon --watch src --ext js,jsx,css,html --exec 'npm run build'",
     "watchServer": "nodemon --watch server --ext js --signal SIGUSR2 --exec 'npm run start'",
     "devserver": "concurrently \"npm run watchServer\" \"npm run watchClient\""
