--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "socket.io-client": "^4.7.4",
+    "source-map-loader": "^5.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
