--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/redis-adapter": "^8.2.1",
+    "chalk": "^5.3.0",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "redis": "^4.6.13",
