--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@socket.io/redis-adapter": "^8.2.1",
     "chalk": "^5.3.0",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "http": "^0.0.1-security",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^4.6.13",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
