got working on minikube again

--- a/mongo-kube-deploy.yml
+++ b/mongo-kube-deploy.yml
@@ -26,6 +26,18 @@ spec:
           claimName: mongo-pvc
 ---
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-pvc
+  namespace: default  # Ensure this matches the namespace of your deployment if not default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
