--- a/node-kube-deploy.yml
+++ b/node-kube-deploy.yml
@@ -6,33 +6,35 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nodejs
+      app: fight2
   template:
     metadata:
       labels:
-        app: nodejs
+        app: fight2
     spec:
       containers:
-      - name: nodejs
-        image: nicoletrinity/fight2
-        imagePullPolicy: IfNotPresent
+      - name: fight2
+        image: nicoletrinity/fight2.js
+        imagePullPolicy: Never
         ports:
-        - containerPort: 3000
+        - containerPort: 8080
         env:
         - name: REDIS_HOST
           value: "redis-service"
+        - name: MONGO_URL
+          value: "mongodb://mongodb-service:27017"
         - name: PORT
-          value: "3000"
+          value: "8080"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-service
+  name: fight2-service
 spec:
   type: NodePort
   ports:
-  - port: 3000
-    targetPort: 3000
+  - port: 8080
+    targetPort: 8080
     nodePort: 30001
   selector:
-    app: nodejs
+    app: fight2
