--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.2.1",
     "chalk": "^5.3.0",
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
