get node exporter dashboard working in grafana

--- a/kubernetes/prometheus-deploy.yml
+++ b/kubernetes/prometheus-deploy.yml
@@ -60,7 +60,7 @@ data:
       - job_name: 'kubernetes-nodes'
         kubernetes_sd_configs:
           - role: node
-      - job_name: 'node-exporter'
+      - job_name: 'node'
         kubernetes_sd_configs:
           - role: endpoints
         relabel_configs:
