--- a/kubernetes/grafana-deploy.yml
+++ b/kubernetes/grafana-deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:8.1.2
+        image: grafana/grafana-oss
         ports:
         - containerPort: 3000
         env:
@@ -28,13 +28,25 @@ spec:
           - name: GF_USERS_ALLOW_SIGN_UP
             value: "false"
         volumeMounts:
-        - name: grafana-datasources
+        - name: grafana-datasources-provisioning
           mountPath: /etc/grafana/provisioning/datasources
           readOnly: true
+        - name: grafana-dashboard-provisioning
+          mountPath: /etc/grafana/provisioning/dashboards
+          readOnly: true
+        - name: grafana-node-exporter-dashboard
+          mountPath: /var/lib/grafana/dashboards
+          readOnly: true
       volumes:
-      - name: grafana-datasources
+      - name: grafana-datasources-provisioning
         configMap:
-          name: grafana-datasources
+          name: grafana-datasources-provisioning
+      - name: grafana-dashboard-provisioning
+        configMap:
+          name: grafana-dashboard-provisioning
+      - name: grafana-node-exporter-dashboard
+        configMap:
+          name: grafana-node-exporter-dashboard
 ---
 apiVersion: v1
 kind: Service
@@ -51,7 +63,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-datasources
+  name: grafana-datasources-provisioning
   labels:
     app: grafana
 data:
@@ -63,3 +75,20 @@ data:
       url: http://prometheus-service:9090
       access: proxy
       isDefault: true
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-dashboard-provisioning
+data:
+  dashboards.yaml: |
+    apiVersion: 1
+    providers:
+    - name: 'default'
+      orgId: 1
+      folder: ''
+      type: file
+      disableDeletion: false
+      editable: true
+      options:
+        path: /var/lib/grafana/dashboards
