--- a/kubernetes/node-exporter-deploy.yml
+++ b/kubernetes/node-exporter-deploy.yml
@@ -23,6 +23,8 @@ spec:
         - --path.rootfs=/host/root
         - --no-collector.wifi
         - --no-collector.hwmon
+        - --collector.systemd 
+        - --collector.processes
         - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
         - --collector.netclass.ignored-devices=^(veth.*)$
         name: node-exporter
