--- a/kubernetes/app.yml
+++ b/kubernetes/app.yml
@@ -25,6 +25,8 @@ spec:
           value: "mongodb://mongodb-service:27017"
         - name: PORT
           value: "8080"
+        - name: environment
+          value: "production"
         volumeMounts:
         - name: secret-volume
           mountPath: "/etc/secrets"
