--- a/kubernetes/app.yml
+++ b/kubernetes/app.yml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: fight2
         image: nicoletrinity/fight2.js
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         env:
@@ -41,10 +41,9 @@ kind: Service
 metadata:
   name: fight2-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - port: 8080
+  - port: 80
     targetPort: 8080
-    nodePort: 30001
   selector:
     app: fight2
