--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,13 @@
-mongo-data/
+node_modules
+npm-debug.log
+.git
+.gitignore
+README.md
+.env
+.nyc_output
+coverage
+.nyc_output
+.cache
+dist
+mongo-data
+*.log
